--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,7 +15,7 @@
             </div>
             <div class="header-meta">
                 <div class="current-gameweek">
-                    Current Gameweek: <span>GW {{ current_gameweek }}</span>
+                    {{ gameweek_status }}
                 </div>
                 {% if last_update %}
                 <div class="last-updated">
