readded coloured pill format on current gw label in header

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -15,7 +15,7 @@
             </div>
             <div class="header-meta">
                 <div class="current-gameweek">
-                    {{ gameweek_status }}
+                    <span>{{ gameweek_status }}</span>
                 </div>
                 {% if last_update %}
                 <div class="last-updated">
